RESOLVED FIXED281250
[WebRTC] Fix RTCPeerConnection build without WebCodecs
https://bugs.webkit.org/show_bug.cgi?id=281250
Summary [WebRTC] Fix RTCPeerConnection build without WebCodecs
Olivier Blin
Reported 2024-10-10 14:44:17 PDT
webCodecsVideoEnabled() can not be used when WebCodecs is disabled.
Attachments
Olivier Blin
Comment 1 2024-10-10 14:56:07 PDT
EWS
Comment 2 2024-10-11 05:43:34 PDT
Committed 285013@main (369f00483575): <https://commits.webkit.org/285013@main> Reviewed commits have been landed. Closing PR #35001 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-10-11 05:44:15 PDT
Note You need to log in before you can comment on or make changes to this bug.