[WebRTC] Fix RTCPeerConnection build without WebCodecs https://bugs.webkit.org/show_bug.cgi?id=281250

Reviewed by NOBODY (OOPS!).

webCodecsVideoEnabled() can not be used when WebCodecs is disabled.

* Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::create):