Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp
@@ -105,7 +105,11 @@ ExceptionOr<Ref<RTCPeerConnection>> RTCPeerConnection::create(Document& document
                 WTFLogLevel level = LogWebRTC.level;
                 if (level != WTFLogLevel::Debug && document.settings().webRTCMediaPipelineAdditionalLoggingEnabled())
                     level = WTFLogLevel::Info;
-                if (document.settings().webCodecsVideoEnabled() || document.settings().peerConnectionEnabled())
+                if (document.settings().peerConnectionEnabled()
+#if ENABLE(WEB_CODECS)
+                    || document.settings().webCodecsVideoEnabled()
+#endif
+                    )
                     page->webRTCProvider().setLoggingLevel(level);
             }
 #endif
